qa(bug-fix):uas-arrow-navbar-lang-change-point-row-gap

--- a/src/pages/JoinUs-pages/UAS/UAS.css
+++ b/src/pages/JoinUs-pages/UAS/UAS.css
@@ -44,6 +44,7 @@
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
+  row-gap: 0.5rem;
 }
 
 .uas-description-for-eligibility-content-one > div {
